Correct introduction after Andrea's feedback

--- a/references.bib
+++ b/references.bib
@@ -117,7 +117,7 @@ pages = {135-187},
 year = {2015},
 issn = {0167-5729},
 doi = {https://doi.org/10.1016/j.surfrep.2015.01.001},
-author = {Beatriz {Roldan Cuenya} and Farzad Behafarid},
+author = {{Roldan Cuenya}, Beatriz and Behafarid, Farzad},
 abstract = {In recent years, the field of catalysis has experienced an astonishing transformation, driven in part by more demanding environmental standards and critical societal and industrial needs such as the search for alternative energy sources. Thanks to the advent of nanotechnology, major steps have been made towards the rational design of novel catalysts. Striking new catalytic properties, including greatly enhanced reactivities and selectivities, have been reported for nanoparticle (NP) catalysts as compared to their bulk counterparts. However, in order to harness the power of these nanocatalysts, a detailed understanding of the origin of their enhanced performance is needed. The present review focuses on the role of the NP size and shape on chemisorption and catalytic performance. Since homogeneity in NP size and shape is a prerequisite for the understanding of structure–reactivity correlations, we first review different synthesis methods that result in narrow NP size distributions and shape controlled NPs. Next, size-dependent phenomena which influence the chemical reactivity of NPs, including quantum size-effects and the presence of under-coordinated surface atoms are examined. The effect of the NP shape on catalytic performance is discussed and explained based on the existence of different atomic structures on the NP surface with distinct chemisorption properties. The influence of additional factors, such as the oxidation state of the NPs and NP–support interactions, is also considered in the frame of the size- and shape-dependency that these phenomena present. Ultimately, our review highlights the importance of achieving a systematic understanding of the factors that control the activity and selectivity of a catalyst in order to avoid trial and error methods in the rational design of the new generation of nanocatalysts with properties tunable at the atomic level.}
 }
 
@@ -1053,7 +1053,7 @@ author={Starr, David E.},
 title={A Brief Overview of the Principles of Ambient Pressure X-ray Spectroscopies},
 series={ACS Symposium Series},
 year={2021},
-month={Nov},
+month={11},
 day={11},
 publisher={American Chemical Society},
 volume={1396},
@@ -2544,7 +2544,7 @@ pages = {3127-3150},
 year = {2010},
 issn = {0040-6090},
 doi = {https://doi.org/10.1016/j.tsf.2010.01.018},
-author = {Beatriz Roldan Cuenya},
+author = {{Roldan Cuenya}, Beatriz},
 keywords = {Catalysis, Nanoparticle, Cluster, Reactivity, XPS, EXAFS, TPD, STM, Mass spectrometry, Electrochemistry},
 }
 
@@ -2635,7 +2635,7 @@ year = {2017}
 
 @report{Marchesini2003a,
    abstract = {The inversion of a diffraction pattern offers aberration-free diffraction-limited 3D images without the resolution and depth-of-field limitations of lens-based tomographic systems, the only limitation being radiation damage. We review our recent experimental results, in which X-ray images were reconstructed from the diffraction pattern alone. A preliminary analysis of the radiation dose needed for CXDI imaging and the dose tolerance of frozen-hydrated life-science samples suggests},
-   author = {S Marchesini and H N Chapman and S P Hau-Riege and R A London and A Szoke and H He and M R Howells and H Padmore and R Rosen and J C H Spence and U Weierstall},
+   author = {Marchesini, S. and Chapman, H N and Hau-Riege, S P and London, R A and A Szoke and H He and M R Howells and H Padmore and R Rosen and J C H Spence and U Weierstall},
    title = {Coherent X-ray diffractive imaging: applications and limitations},
    year = {2003},
 }
@@ -2802,7 +2802,7 @@ abstract = {This chapter describes the various different types of mechanism that
 
 @article{Ulvestad2015,
 abstract = {Topological defects can markedly alter nanomaterial properties. This presents opportunities for "defect engineering," where desired functionalities are generated through defect manipulation. However, imaging defects in working devices with nanoscale resolution remains elusive. We report three-dimensional imaging of dislocation dynamics in individual battery cathode nanoparticles under operando conditions using Bragg coherent diffractive imaging. Dislocations are static at room temperature and mobile during charge transport. During the structural phase transformation, the lithium-rich phase nucleates near the dislocation and spreads inhomogeneously. The dislocation field is a local probe of elastic properties, and we find that a region of the material exhibits a negative Poisson's ratio at high voltage. Operando dislocation imaging thus opens a powerful avenue for facilitating improvement and rational design of nanostructured materials.},
-author = {Ulvestad, U. and Singer, A. and Clark, J. N. and Cho, H. M. and Kim, J. W. and Harder, R. and Maser, J. and Meng, Y. S. and Shpyrko, O. G.},
+author = {Ulvestad, A. and Singer, A. and Clark, J. N. and Cho, H. M. and Kim, J. W. and Harder, R. and Maser, J. and Meng, Y. S. and Shpyrko, O. G.},
 doi = {10.1126/science.aaa1313},
 issn = {10959203},
 journal = {Science},
@@ -2954,6 +2954,81 @@ pages={718},
 abstract={Selective oxidation of ammonia to nitric oxide over platinum-group metal alloy gauzes is the crucial step for nitric acid production, a century-old yet greenhouse gas and capital intensive process. Therefore, developing alternative ammonia oxidation technologies with low environmental impacts and reduced catalyst cost are of significant importance. Herein, we propose and demonstrate a chemical looping ammonia oxidation catalyst and process to replace the costly noble metal catalysts and to reduce greenhouse gas emission. The proposed process exhibit near complete NH$_3$ conversion and exceptional NO selectivity with negligible N$_2$O production, using nonprecious V2O5 redox catalyst at 650 oC. Operando spectroscopy techniques and density functional theory calculations point towards a modified, temporally separated Mars-van Krevelen mechanism featuring a reversible V5+/V4+ redox cycle. The V{\thinspace}={\thinspace}O sites are suggested to be the catalytically active center leading to the formation of the oxidation products. Meanwhile, both V{\thinspace}={\thinspace}O and doubly coordinated oxygen participate in the hydrogen transfer process. The outstanding performance originates from the low activation energies for the successive hydrogen abstraction, facile NO formation as well as the easy regeneration of V{\thinspace}={\thinspace}O species. Our results highlight a transformational process in extending the chemical looping strategy to producing base chemicals in a sustainable and cost-effective manner.},
 issn={2041-1723},
 doi={10.1038/s41467-022-28370-0},
+}
+
+@article{Galloway1981,
+title = {Acid precipitation: The importance of nitric acid},
+journal = {Atmospheric Environment (1967)},
+volume = {15},
+number = {6},
+pages = {1081-1085},
+year = {1981},
+issn = {0004-6981},
+doi = {https://doi.org/10.1016/0004-6981(81)90109-8},
+author = {James N. Galloway and Gene E. Likens},
+}
+
+@article{Mason1956,
+author = {Mason, David M.},
+title = {Properties of Fuming Nitric Acid Affecting Its Storage and Use as a Rocket Propellant},
+journal = {Journal of Jet Propulsion},
+volume = {26},
+number = {9},
+pages = {741-744},
+year = {1956},
+doi = {10.2514/8.7130},
+}
+
+@article{Oommen1999,
+title = {Ammonium nitrate: a promising rocket propellant oxidizer},
+journal = {Journal of Hazardous Materials},
+volume = {67},
+number = {3},
+pages = {253-281},
+year = {1999},
+issn = {0304-3894},
+doi = {https://doi.org/10.1016/S0304-3894(99)00039-4},
+author = {C. Oommen and S.R. Jain},
+keywords = {Ammonium nitrate, Solid composite propellants, Clean burning propellants, Phase modification, Explosives, Burning rate},
+abstract = {Ammonium nitrate (AN) is extensively used in the area of fertilizers and explosives. It is present as the major component in most industrial explosives. Its use as an oxidizer in the area of propellants, however, is not as extensive as in explosive compositions or gas generators. With the growing demand for environmental friendly chlorine free propellants, many attempts have been made of late to investigate oxidizers producing innocuous combustion products. AN, unlike the widely used ammonium perchlorate, produces completely ecofriendly smokeless products. Besides, it is one of the cheapest and easily available compounds. However, its use in large rocket motors is restricted due to some of its adverse characteristics like hygroscopicity, near room temperature phase transformation involving a volume change, and low burning rate (BR) and energetics. The review is an attempt to consolidate the information available on the various issues pertaining to its use as a solid propellant oxidizer. Detailed discussions on the aspects relating to phase modifications, decomposition chemistry, and BR and energetics of AN-based propellants, are presented. To make the review more comprehensive brief descriptions of the history, manufacture, safety, physical and chemical properties and various other applications of the salt are also included.}
+}
+
+@article{Ganzhou2020,
+author = {Wang, Ganzhou and Mitsos, Alexander and Marquardt, Wolfgang},
+title = {Renewable production of ammonia and nitric acid},
+journal = {AIChE Journal},
+volume = {66},
+number = {6},
+keywords = {dynamic optimization, electrification, Haber-Bosch, process design, sustainability},
+doi = {https://doi.org/10.1002/aic.16947},
+abstract = {Decarbonization of the power sector offers ammonia industry an opportunity to reduce its CO2 emissions through sector coupling. Extending from our previous work, we propose a power-based process for ammonia and nitric acid production. The coupling of nitric acid production facilitates highly efficient heat integration between steam electrolysis and the rest of the process. We investigate the economic performance of the production complex through a model-based dynamic optimization approach, considering scenarios with or without incorporation of intermittent wind power as well as deployment of battery storage. In all cases, the wind power integration proves to be economic with a peak-to-base load ratio of up to 2.3. The new process reduces primary energy consumption by more than 13\% compared to conventional technologies. However, it is only economically competitive with help of either a low-cost battery storage or a higher carbon price on fossil fuels. The results also confirm the importance of considering process dynamics during process design.},
+year = {2020}
+}
+
+@Article{Hughes1950,
+author ="Hughes, E. D. and Ingold, C. K. and Reed, R. I.",
+title  ="493. Kinetics and mechanism of aromatic nitration. Part II. Nitration by the nitronium ion{,} NO2+{,} derived from nitric acid",
+journal  ="J. Chem. Soc.",
+year  ="1950",
+issue  ="0",
+pages  ="2400-2440",
+publisher  ="The Royal Society of Chemistry",
+doi  ="10.1039/JR9500002400",
+abstract  =""
+}
+
+@Article{Lim2021a,
+author={Lim, Jeonghoon and Fern{\'a}ndez, Carlos A. and Lee, Seung Woo and Hatzell, Marta C.},
+title={Ammonia and Nitric Acid Demands for Fertilizer Use in 2050},
+journal={ACS Energy Letters},
+year={2021},
+month={10},
+day={08},
+publisher={American Chemical Society},
+volume={6},
+number={10},
+pages={3676-3685},
+doi={10.1021/acsenergylett.1c01614},
 }
 
 @article{Lim2021,
@@ -3403,17 +3478,6 @@ eprint = {2010.16374},
 keywords = {coherence,crystallography,diffraction,imaging,nanoparticles},
 title = {{Three-dimensional coherent Bragg imaging of rotating nanoparticles}},
 year = {2020}
-}
-
-@article{Starr2021,
-author = {Starr, David E},
-doi = {10.1021/bk-2021-1396.ch001},
-issn = {9780841298125},
-journal = {Ambient Pressure Spectroscopy in Complex Chemical Environments, Part 1 - A Brief Overview of the Principles of Ambient Pressure X-ray Spectroscopies},
-pages = {1--17},
-publisher = {American Chemical Society},
-title = {{A Brief Overview of the Principles of Ambient Pressure X - ray Spectroscopies}},
-year = {2021}
 }
 
 @phdthesis{Fernandez2017,
@@ -4483,7 +4547,7 @@ abstract = {Research in the field of automotive exhaust catalysis has paralleled
   pages = {125434},
   numpages = {13},
   year = {2009},
-  month = {Mar},
+  month = {03},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevB.79.125434},
 }
@@ -4493,7 +4557,7 @@ author={Wild, U. and Teschner, D. and Schl{\"o}gl, R. and Pa{\'a}l, Z.},
 title={Surface composition and possible rearrangement of disperse Pt and Rh catalysts: does the presence of carbon and oxygen contribute to different catalytic properties?},
 journal={Catalysis Letters},
 year={2000},
-month={Jul},
+month={07},
 day={01},
 volume={67},
 number={2},
@@ -6334,6 +6398,33 @@ abstract = {The focusing and coherence properties of the NanoMAX Kirkpatrick{--}
 keywords = {nano-focus, coherence, holography},
 }
 
+@incollection{Lee2005,
+title = {11 - Process Design},
+author= {Lee, Frank},
+editor = {Sam Mannan},
+booktitle = {Lees' Loss Prevention in the Process Industries (Third Edition)},
+publisher = {Butterworth-Heinemann},
+edition = {Third Edition},
+address = {Burlington},
+pages = {11/1-11/65},
+year = {2005},
+isbn = {978-0-7506-7555-0},
+doi = {https://doi.org/10.1016/B978-075067555-0.50099-2},
+}
+
+@incollection{Ouellette2014,
+title = {13 - Electrophilic Aromatic Substitution},
+editor = {Robert J. Ouellette and J. David Rawn},
+booktitle = {Organic Chemistry},
+publisher = {Elsevier},
+address = {Boston},
+pages = {417-451},
+year = {2014},
+isbn = {978-0-12-800780-8},
+doi = {https://doi.org/10.1016/B978-0-12-800780-8.00013-9},
+author = {Robert J. Ouellette and J. David Rawn}
+}
+
 @article{Alexander1920,
 author = {Jerome, Alexander},
 title = {The Award of the Nobel Prize to Professor Haber},
@@ -6877,7 +6968,7 @@ doi={10.1021/ja5030172},
 }
 
 @article{Robinson2001,
-author = {Robinson, I K and Vartanyants, I A and Williams, G J and Pfeifer, M A and Pitney, J A},
+author = {Robinson, I. K. and Vartanyants, I. A. and Williams, G. J. and Pfeifer, M. A. and Pitney, J. A.},
 doi = {10.1103/PhysRevLett.87.195505},
 journal = {Phys. Rev. Lett.},
 number = {19},
